# scarab

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/scarab/: __init__.py  app.py
src/scarab/data/: __init__.py  loader.py  user_stats.json
src/scarab/data/exercises/: catalog.yaml
src/scarab/data/frames/jumping_jacks/: medium.txt
src/scarab/data/workouts/: full_body_circuit.yaml  new_workout.yaml  sample_workout_2.yaml
src/scarab/editor/: __init__.py  exercise_picker.py  loop_section.py  sequence_editor.py  sequence_tree.py  sets_input.py
src/scarab/models/: __init__.py  exercise.py  stats.py  workout.py
src/scarab/playback/: __init__.py  animation.py  player.py  player_screen.py  stat_tracker.py
src/scarab/screens/: editor_picker_screen.py  library_screen.py  workouts_screen.py
src/scarab/styles/: scarab.css
src/scarab/tools/: __init__.py
src/scarab/tools/ascii_generator/: __init__.py  __main__.py
